@@ -57,8 +57,8 @@ using namespace EGL;
 
 
 Light :: Light() 
-:	m_AmbientColor(F(0.2f), F(0.2f), F(0.2f), F(1.0f)),
-	m_DiffuseColor(F(0.8f), F(0.8f), F(0.8f), F(1.0f)),
+:	m_AmbientColor(F(0.0f), F(0.0f), F(0.0f), F(1.0f)),
+	m_DiffuseColor(F(0.0f), F(0.0f), F(0.0f), F(1.0f)),
 	m_SpecularColor(F(0.0f), F(0.0f), F(0.0f), F(1.0f)),
 	m_Position(F(0.0f), F(0.0f), F(1.0f), F(0.0f)),
 	m_SpotDirection(F(0.0f), F(0.0f), F(-1.0f)),
@@ -110,11 +110,6 @@ void Light :: SetQuadraticAttenuation(EGL_Fixed attenuation) {
 	m_QuadraticAttenuation = attenuation;
 }
 
-/*
-void Light :: SetSpecularExponent(EGL_Fixed exponent) {
-	m_SpecularExponent = exponent;
-}
-*/
 
 void Light :: SetSpotExponent(EGL_Fixed exponent) {
 	m_SpotExponent = exponent;
@@ -187,6 +182,55 @@ void Light :: AccumulateLight(const Vec4D& vertexCoords, const Vec3D& vertexNorm
 }
 
 
+void Light :: AccumulateLight(const Vec4D& vertexCoords, const Vec3D& vertexNormal, 
+							  const Material& currMaterial,
+							  const FractionalColor & currentColor, 
+							  FractionalColor& result) {
+	// initially, do not support spotlights to simplify calculations,
+	// i.e. set spot_i from lightning equation (p. 48) to 1.0
+
+	result += currentColor * m_AmbientColor;
+
+	Vec3D vp_li = EGL_Direction(vertexCoords, m_Position);
+	EGL_Fixed sqLength = vp_li.LengthSq();			// keep squared length around for later
+	vp_li.Normalize();								// can optimizer factor this out?
+	EGL_Fixed diffuseFactor = vertexNormal * vp_li;
+
+	if (diffuseFactor > 0) {
+		EGL_Fixed att = EGL_ONE;
+
+		if (m_SpotCutoff != EGL_FixedFromInt(180)) {
+			EGL_Fixed cosine = vp_li * m_SpotDirection;
+
+			if (cosine < m_CosineSpotCutoff) {
+				return;
+			} else {
+				att = EGL_Power(cosine, m_SpotExponent);
+			}
+		}
+
+		if (m_Position.w() != 0) {
+			EGL_Fixed length = EGL_Sqrt(sqLength);
+
+			att = EGL_Mul(att, EGL_Inverse(m_ConstantAttenuation + 
+				EGL_Mul(m_LinearAttenuation, length) +
+				EGL_Mul(m_QuadraticAttenuation, sqLength)));
+		}
+
+		result.Accumulate(currentColor * m_DiffuseColor, EGL_Mul(diffuseFactor, att));
+
+			// add specular component
+			// calculate h^
+		Vec3D h = vp_li + Vec3D(0, 0, EGL_ONE);
+		h.Normalize();
+		EGL_Fixed specularFactor = vertexNormal * h;
+
+		result.Accumulate(currMaterial.GetSpecularColor() * m_SpecularColor, 
+			EGL_Mul(att, EGL_Power(specularFactor, currMaterial.GetSpecularExponent())));
+	}
+}
+
+
 // --------------------------------------------------------------------------
 // Two-sided lightning calculation
 // --------------------------------------------------------------------------
@@ -232,6 +276,65 @@ void Light :: AccumulateLight(const Vec4D& vertexCoords, const Vec3D& vertexNorm
 		result.Accumulate(currMaterial.GetDiffuseColor() * m_DiffuseColor, EGL_Mul(diffuseFactor, att));
 	else
 		result2.Accumulate(currMaterial.GetDiffuseColor() * m_DiffuseColor, EGL_Mul(-diffuseFactor, att));
+
+		// add specular component
+		// calculate h^
+	Vec3D h = vp_li + Vec3D(0, 0, EGL_ONE);
+	h.Normalize();
+	EGL_Fixed specularFactor = vertexNormal * h;
+
+	if (specularFactor > 0)
+		result.Accumulate(currMaterial.GetSpecularColor() * m_SpecularColor, 
+			EGL_Mul(att, EGL_Power(specularFactor, currMaterial.GetSpecularExponent())));
+	else
+		result2.Accumulate(currMaterial.GetSpecularColor() * m_SpecularColor, 
+			EGL_Mul(att, EGL_Power(-specularFactor, currMaterial.GetSpecularExponent())));
+//	}
+}
+
+
+void Light :: AccumulateLight(const Vec4D& vertexCoords, const Vec3D& vertexNormal, 
+							  const Material& currMaterial,
+							  const FractionalColor& currentColor,
+							  FractionalColor& result, 
+							  FractionalColor& result2) {
+	// initially, do not support spotlights to simplify calculations,
+	// i.e. set spot_i from lightning equation (p. 48) to 1.0
+
+	result += currentColor * m_AmbientColor;
+	result2 += currentColor * m_AmbientColor;
+
+	Vec3D vp_li = EGL_Direction(vertexCoords, m_Position);
+	EGL_Fixed sqLength = vp_li.LengthSq();			// keep squared length around for later
+	vp_li.Normalize();								// can optimizer factor this out?
+	EGL_Fixed diffuseFactor = vertexNormal * vp_li;
+
+//either front or back color have to be enabled...
+//	if (diffuseFactor > 0) {
+	EGL_Fixed att = EGL_ONE;
+
+	if (m_SpotCutoff != EGL_FixedFromInt(180)) {
+		EGL_Fixed cosine = vp_li * m_SpotDirection;
+
+		if (cosine < m_CosineSpotCutoff) {
+			return;
+		} else {
+			att = EGL_Power(cosine, m_SpotExponent);
+		}
+	}
+
+	if (m_Position.w() != 0) {
+		EGL_Fixed length = EGL_Sqrt(sqLength);
+
+		att = EGL_Mul(att, EGL_Inverse(m_ConstantAttenuation + 
+			EGL_Mul(m_LinearAttenuation, length) +
+			EGL_Mul(m_QuadraticAttenuation, sqLength)));
+	}
+
+	if (diffuseFactor > 0)
+		result.Accumulate(currentColor * m_DiffuseColor, EGL_Mul(diffuseFactor, att));
+	else
+		result2.Accumulate(currentColor * m_DiffuseColor, EGL_Mul(-diffuseFactor, att));
 
 		// add specular component
 		// calculate h^
